# Argon

./: README.md  pyproject.toml  setup.py
src/graia/argon/: __init__.py  adapter.py  context.py  dispatcher.py  model.py  util.py
src/graia/argon/event/: __init__.py  lifecycle.py  message.py  mirai.py  network.py
src/graia/argon/message/: chain.py  element.py
src/graia/argon/message/parser/: literature.py
src/test/: adapter.py  app.py  literature.py  message_chain.py  minimal.py
